--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,3 +8,10 @@
 @use "./blocks/site-list.scss";
 @use "./blocks/benefits.scss";
 @use "./blocks/benefits-intro.scss";
+@use "./blocks/effectiveness.scss";
+@use "./blocks/reviews.scss";
+@use "./blocks/rates.scss";
+@use "./blocks/table.scss";
+@use "./blocks/head-cell.scss";
+@use "./blocks/body-cell.scss";
+@use "./blocks/contacts.scss";
