--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,6 @@
 @use "./blocks/head-cell.scss";
 @use "./blocks/body-cell.scss";
 @use "./blocks/contacts.scss";
+@use "./blocks/page-footer.scss";
+@use "./blocks/social.scss";
+@use "./blocks/button.scss";
