--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -14,4 +14,16 @@
   width: 54px;
   height: 54px;
   border-color: rgba(40, 54, 69, 0.1);
+
+  &:hover {
+    border-color: #283645;
+  }
+
+  &:active {
+    border-color: rgba(40, 54, 69, 0.1);
+  }
+
+  &:active .social__icon {
+    opacity: 0.3;
+  }
 }
