--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -2,27 +2,35 @@
   color: #283645;
 }
 
-.reviews__wrapper--mobile {
-  padding: 20px;
+.reviews__wrapper {
+  &--mobile {
+    padding: 20px;
+  }
 }
 
 .reviews__item {
   display: flex;
   flex-direction: column;
   margin: 0;
-}
 
-.reviews__item--mobile {
-  padding-top: 26px;
-}
+  &--mobile {
+    padding-top: 26px;
+  }
 
-.reviews__item--no-display {
-  display: none;
+  &--no-display {
+    display: none;
+  }
 }
 
 .reviews__text {
   margin: 0;
   text-align: center;
+  font-weight: 400;
+
+  &--mobile {
+    font-size: 14px;
+    line-height: 30px;
+  }
 }
 
 .reviews__author-name {
@@ -30,24 +38,17 @@
   font-style: normal;
   text-align: center;
   color: #000000;
+
+  &--mobile {
+    font-size: 18px;
+    text-align: 30px;
+    order: -1;
+    padding-bottom: 20px;
+  }
 }
 
-.reviews__author-name--mobile {
-  font-size: 18px;
-  text-align: 30px;
-  order: -1;
-  padding-bottom: 20px;
-}
-
-.reviews__text {
-  font-weight: 400;
-}
-
-.reviews__text--mobile {
-  font-size: 14px;
-  line-height: 30px;
-}
-
-.reviews__author-info--mobile {
-  display: none;
+.reviews__author-info {
+  &--mobile {
+    display: none;
+  }
 }
