--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -17,19 +17,19 @@
 
 .social__icon {
   position: absolute;
-}
 
-.social__icon--vk {
-  top: 18px;
-  left: 18px;
-}
+  &--vk {
+    top: 18px;
+    left: 18px;
+  }
 
-.social__icon--telegram {
-  top: 17px;
-  left: 16px;
-}
+  &--telegram {
+    top: 17px;
+    left: 16px;
+  }
 
-.social__icon--youtube {
-  top: 20px;
-  left: 20px;
+  &--youtube {
+    top: 20px;
+    left: 20px;
+  }
 }
