--- a/source/sass/blocks/head-cell.scss
+++ b/source/sass/blocks/head-cell.scss
@@ -1,27 +1,27 @@
 .head-cell {
   text-align: center;
-}
 
-.head-cell--mobile {
-  padding: 4px 95px 20px 95px;
+  &--mobile {
+    padding: 4px 95px 20px 95px;
+  }
 }
 
 .head-cell__rate {
   font-weight: 700;
   text-transform: uppercase;
-}
 
-.head-cell__rate--mobile {
-  font-size: 16px;
-  line-height: 30px;
+  &--mobile {
+    font-size: 16px;
+    line-height: 30px;
+  }
 }
 
 .head-cell__price {
   font-weight: 300;
   text-transform: uppercase;
-}
 
-.head-cell__price--mobile {
-  font-size: 18px;
-  line-height: 30px;
+  &--mobile {
+    font-size: 18px;
+    line-height: 30px;
+  }
 }
