--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -5,9 +5,9 @@
 .page__body {
   font-family: "Open Sans", sans-serif;
   background-color: #ffffff;
-}
 
-.page__body--mobile {
-  width: 320px;
-  margin: 0 auto;
+  &--mobile {
+    width: 320px;
+    margin: 0 auto;
+  }
 }
