--- a/source/sass/blocks/rates.scss
+++ b/source/sass/blocks/rates.scss
@@ -2,27 +2,27 @@
   box-sizing: border-box;
   background-image: url("../../img/index/rates-background.svg");
   background-repeat: no-repeat;
-}
 
-.rates--mobile {
-  min-height: 479px;
-  overflow: hidden;
+  &--mobile {
+    min-height: 479px;
+    overflow: hidden;
+  }
 }
 
 .rates__wrapper {
   position: relative;
-}
 
-.rates__wrapper--mobile {
-  height: 279px + 127px;
+  &--mobile {
+    height: 279px + 127px;
+  }
 }
 
 .rates__table-wrapper {
   position: absolute;
   padding-top: 127px;
   left: -256px;
-}
 
-.rates__table-wrapper--mobile {
-  width: 276px * 3 + 4px;
+  &--mobile {
+    width: 276px * 3 + 4px;
+  }
 }
