--- a/source/sass/blocks/table.scss
+++ b/source/sass/blocks/table.scss
@@ -2,12 +2,16 @@
   border-collapse: collapse;
 }
 
-.table__head-data--mobile {
-  display: none;
+.table__head-data {
+  &--mobile {
+    display: none;
+  }
 }
 
-.table__body-data--mobile {
-  display: none;
+.table__body-data {
+  &--mobile {
+    display: none;
+  }
 }
 
 .table__head-cell {
@@ -19,11 +23,11 @@
   &:last-child {
     border-right: none;
   }
-}
 
-.table__head-cell--mobile {
-  width: 278px;
-  height: 94px;
+  &--mobile {
+    width: 278px;
+    height: 94px;
+  }
 }
 
 .table__body-cell {
@@ -31,8 +35,8 @@
   background-color: #ffffff;
   border: 2px #e5e5e5 solid;
   border-top: none;
-}
 
-.table__body-cell--mobile {
-  height: 59px;
+  &--mobile {
+    height: 59px;
+  }
 }
