Добавляет стилизацию main form

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,3 +18,14 @@
 @use "./blocks/page-footer.scss";
 @use "./blocks/social.scss";
 @use "./blocks/button.scss";
+@use "./blocks/form.scss";
+@use "./blocks/contestant.scss";
+@use "./blocks/form-label.scss";
+@use "./blocks/form-legend.scss";
+@use "./blocks/user-contacts.scss";
+@use "./blocks/form-input.scss";
+@use "./blocks/check-label.scss";
+@use "./blocks/story";
+@use "./blocks/form-button.scss";
+@use "./blocks/submit-button.scss";
+@use "./blocks/submit-wrapper.scss";
