Добавляет стилизацию модальных окон

--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -3,6 +3,7 @@
 }
 
 .page__body {
+  position: relative;
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
   background-color: #ffffff;
