--- a/source/sass/blocks/submit-button.scss
+++ b/source/sass/blocks/submit-button.scss
@@ -1,6 +1,7 @@
 .submit-button {
   background-color: #2aab6d;
   color: #ffffff;
+  font-weight: 700;
   border: 2px #2aab6d solid;
   border-radius: 3px;
   text-transform: uppercase;
