--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,3 +29,4 @@
 @use "./blocks/form-button.scss";
 @use "./blocks/submit-button.scss";
 @use "./blocks/submit-wrapper.scss";
+@use "./blocks/modal.scss";
