Добавляет стилизацию main каталога

--- a/source/sass/blocks/apps.scss
+++ b/source/sass/blocks/apps.scss
@@ -20,7 +20,9 @@
 }
 
 .apps__button {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .apps__list {
