--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -4,9 +4,15 @@
   border-width: 3px;
   border-radius: 29px;
   border-style: solid;
+  text-align: center;
+  font-size: 18px;
+  line-height: 18px;
+  font-weight: 700;
+  text-decoration: none;
 
   &--download {
     border-color: #ffffff;
+    color: #ffffff;
   }
 
   &--social {
@@ -24,6 +30,39 @@
 
     &:active .social__icon {
       opacity: 0.3;
+    }
+  }
+
+  &--editor-upload {
+    color: #d22856;
+    border-color: #d22856;
+    background-color: transparent;
+    cursor: pointer;
+
+    &:hover {
+      color: #ffffff;
+      background-color: #d22856;
+    }
+
+    &:active {
+      color: rgba(255, 255, 255, 0.3);
+    }
+  }
+
+  &--editor-cansel {
+    color: #283645;
+    border-color: #283645;
+    background-color: transparent;
+    opacity: 0.1;
+    cursor: pointer;
+
+    &:hover {
+      opacity: 0.3;
+    }
+
+    &:active {
+      color: #ffffff;
+      background-color: #283645;
     }
   }
 }
