--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,3 +30,10 @@
 @use "./blocks/submit-button.scss";
 @use "./blocks/submit-wrapper.scss";
 @use "./blocks/modal.scss";
+@use "./blocks/content-wrapper.scss";
+@use "./blocks/catalog.scss";
+@use "./blocks/photo.scss";
+@use "./blocks/gallery.scss";
+@use "./blocks/photo-editor.scss";
+@use "./blocks/form-photo.scss";
+@use "./blocks/editor.scss";
