:heavy_check_mark: Сборка #4

--- a/4/css/style.css
+++ b/4/css/style.css
@@ -994,7 +994,7 @@
   line-height: 24px;
   font-weight: 400;
   text-transform: uppercase;
-  color: #D22856;
+  color: #d22856;
 }
 
 .gallery__list {
