Разбираемся, что не так с адресом фоновых изображений-1

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -12,7 +12,7 @@
 
   &--mobile-index {
     min-height: 733px;
-    background-image: url("../../img/header/phone-hand.png"), url("../../img/header/phone-screen.jpg"), url("../../img/header/background-mobile.jpg");
+    background-image: url("../../img/header/phone-hand.png"), url("../../img/header/phone-screen.jpg"), url("/../img/header/background-mobile.jpg");
     background-repeat: no-repeat;
     background-position: left 176px, center 209px, top;
   }
