--- a/source/sass/blocks/story.scss
+++ b/source/sass/blocks/story.scss
@@ -15,13 +15,13 @@
     font-family: "Open Sans", sans-serif;
     font-size: 18px;
     line-height: 30px;
-    color: #283645;
+    color: $darkgrey;
   }
 
   &::-moz-placeholder {
     font-family: "Open Sans", sans-serif;
     font-size: 18px;
     line-height: 30px;
-    color: #283645;
+    color: $darkgrey;
   }
 }
