--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,39 +1,40 @@
-@use "font-face.scss";
-@use "visually-hidden";
-@use "./blocks/page.scss";
-@use "./blocks/page-header.scss";
-@use "./blocks/nav-wrapper.scss";
-@use "./blocks/logo-link.scss";
-@use "./blocks/apps.scss";
-@use "./blocks/site-list.scss";
-@use "./blocks/benefits.scss";
-@use "./blocks/benefits-intro.scss";
-@use "./blocks/effectiveness.scss";
-@use "./blocks/reviews.scss";
-@use "./blocks/rates.scss";
-@use "./blocks/table.scss";
-@use "./blocks/head-cell.scss";
-@use "./blocks/body-cell.scss";
-@use "./blocks/contacts.scss";
-@use "./blocks/page-footer.scss";
-@use "./blocks/social.scss";
-@use "./blocks/button.scss";
-@use "./blocks/form.scss";
-@use "./blocks/contestant.scss";
-@use "./blocks/form-label.scss";
-@use "./blocks/form-legend.scss";
-@use "./blocks/user-contacts.scss";
-@use "./blocks/form-input.scss";
-@use "./blocks/check-label.scss";
-@use "./blocks/story";
-@use "./blocks/form-button.scss";
-@use "./blocks/submit-button.scss";
-@use "./blocks/submit-wrapper.scss";
-@use "./blocks/modal.scss";
-@use "./blocks/content-wrapper.scss";
-@use "./blocks/catalog.scss";
-@use "./blocks/photo.scss";
-@use "./blocks/gallery.scss";
-@use "./blocks/photo-editor.scss";
-@use "./blocks/form-photo.scss";
-@use "./blocks/editor.scss";
+@import "./variable.scss";
+@import "./font-face.scss";
+@import "./visually-hidden";
+@import "./blocks/page.scss";
+@import "./blocks/page-header.scss";
+@import "./blocks/nav-wrapper.scss";
+@import "./blocks/logo-link.scss";
+@import "./blocks/apps.scss";
+@import "./blocks/site-list.scss";
+@import "./blocks/benefits.scss";
+@import "./blocks/benefits-intro.scss";
+@import "./blocks/effectiveness.scss";
+@import "./blocks/reviews.scss";
+@import "./blocks/rates.scss";
+@import "./blocks/table.scss";
+@import "./blocks/head-cell.scss";
+@import "./blocks/body-cell.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/page-footer.scss";
+@import "./blocks/social.scss";
+@import "./blocks/button.scss";
+@import "./blocks/form.scss";
+@import "./blocks/contestant.scss";
+@import "./blocks/form-label.scss";
+@import "./blocks/form-legend.scss";
+@import "./blocks/user-contacts.scss";
+@import "./blocks/form-input.scss";
+@import "./blocks/check-label.scss";
+@import "./blocks/story";
+@import "./blocks/form-button.scss";
+@import "./blocks/submit-button.scss";
+@import "./blocks/submit-wrapper.scss";
+@import "./blocks/modal.scss";
+@import "./blocks/content-wrapper.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/photo.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/photo-editor.scss";
+@import "./blocks/form-photo.scss";
+@import "./blocks/editor.scss";
