--- a/source/sass/blocks/contestant.scss
+++ b/source/sass/blocks/contestant.scss
@@ -7,19 +7,13 @@
   margin: 0;
   padding: 0;
   display: flex;
-
-  &--mobile {
-    flex-direction: column;
-  }
+  flex-direction: column;
 }
 
 .contestant__item {
   display: flex;
-
-  &--mobile {
-    flex-direction: column;
-    padding-bottom: 19px;
-  }
+  flex-direction: column;
+  padding-bottom: 19px;
 }
 
 .contestant__input {
@@ -29,10 +23,10 @@
   height: 59px;
 
   &::-webkit-input-placeholder {
-    color: #283645;
+    color: $darkgrey;
   }
 
   &::-moz-placeholder {
-    color: #283645;
+    color: $darkgrey;
   }
 }
