--- a/source/sass/blocks/form-input.scss
+++ b/source/sass/blocks/form-input.scss
@@ -3,12 +3,13 @@
   padding-left: 20px;
   border: 2px #e5e5e5 solid;
   border-radius: 2px;
+  color: $darkgrey;
 
   &:hover {
-    border-color: #283645;
+    border-color: $darkgrey;
   }
 
   &:active {
-    border-color: #d22856;
+    border-color: $pink;
   }
 }
