--- a/source/sass/blocks/form-label.scss
+++ b/source/sass/blocks/form-label.scss
@@ -1,12 +1,7 @@
 .form-label {
-  color: #d22856;
+  color: $pink;
   text-transform: uppercase;
-  font-size: 14px;
-  font-weight: 400;
   line-height: 30px;
-
-  &--mobile {
-    padding-left: 24px;
-    padding-bottom: 7px;
-  }
+  padding-left: 24px;
+  padding-bottom: 7px;
 }
