--- a/source/sass/blocks/form-legend.scss
+++ b/source/sass/blocks/form-legend.scss
@@ -1,8 +1,6 @@
 .form-legend {
-  color: #d22856;
+  color: $pink;
   text-transform: uppercase;
-  font-size: 14px;
-  font-weight: 400;
   line-height: 18px;
   text-align: center;
 }
