--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,23 +1,16 @@
-.page-footer {
-  color: #283645;
-}
-
 .page-footer__content-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  &--mobile {
-    box-sizing: border-box;
-    flex-direction: column;
-    padding: 40px 70px 40px 70px;
-    min-height: 284px;
-  }
+  box-sizing: border-box;
+  flex-direction: column;
+  padding: 40px 70px 40px 70px;
+  min-height: 284px;
 }
 
 .page-footer__logo {
   &:hover .page-footer__icon-logo .page-footer__icon-path {
-    fill: #d22856;
+    fill: $pink;
   }
 
   &:active {
@@ -25,17 +18,14 @@
   }
 
   &:active .page-footer__icon-logo .page-footer__icon-path {
-    fill: #283645;
+    fill: $darkgrey;
   }
 }
 
 .page-footer__copyright {
   display: flex;
-
-  &--mobile {
-    justify-content: space-between;
-    align-items: center;
-  }
+  justify-content: space-between;
+  align-items: center;
 }
 
 .page-footer__copyright-link {
@@ -44,20 +34,23 @@
   align-items: center;
   text-decoration: none;
   font-weight: 400;
-  color: #283645;
+  color: $darkgrey;
+  width: 130px;
+  font-size: 14px;
+  line-height: 18px;
 
   &:hover {
     text-decoration: none;
-    color: #283645;
+    color: $darkgrey;
   }
 
   &:hover .page-footer__academy-logo {
-    fill: #283645;
+    fill: $darkgrey;
   }
 
   &:active {
     text-decoration: none;
-    color: #283645;
+    color: $darkgrey;
   }
 
   &:active .page-footer__academy-logo {
@@ -66,16 +59,10 @@
 
   &:visited {
     text-decoration: none;
-    color: #283645;
-  }
-
-  &--mobile {
-    width: 130px;
-    font-size: 14px;
-    line-height: 18px;
+    color: $darkgrey;
   }
 }
 
 .page-footer__academy-logo {
-  fill: #d22856;
+  fill: $pink;
 }
