--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,45 +1,39 @@
 .page-header {
-  position: relative;
+  display: flex;
+  flex-direction: column;
   background-color: #1d2631;
   color: #ffffff;
+  background-image: url("../img/header/background-mobile.jpg");
+  background-repeat: no-repeat;
+  background-position: top;
 
-  &--mobile {
-    min-height: 171px + 66px;
-    background-image: url("../../img/header/background-mobile.jpg");
-    background-repeat: no-repeat;
-    background-position: top;
-  }
-
-  &--mobile-index {
+  &--index {
     min-height: 733px;
-    background-image: url("../../img/header/phone-hand.png"), url("../../img/header/phone-screen.jpg"), url("../../img/header/background-mobile.jpg");
+    background-image: url("../img/header/phone-hand.png"), url("../img/header/phone-screen.jpg"), url("../img/header/background-mobile.jpg");
     background-repeat: no-repeat;
     background-position: left 176px, center 209px, top;
   }
 }
 
+.page-header__nav-wrapper {
+  padding: 21px 20px 21px 20px;
+}
+
 .page-header__title-wrapper {
   display: flex;
-
-  &--mobile {
-    justify-content: center;
-    padding: 20px;
-  }
+  justify-content: center;
+  padding: 20px;
 }
 
 .page-header__title {
   margin: 0;
-  padding: 0;
+  padding: 16 px 0 0 0;
+  font-size: 24px;
+  line-height: 33px;
   font-weight: 300;
   text-align: center;
 
-  &--mobile {
-    font-size: 24px;
-    line-height: 33px;
-    padding-top: 16px;
-  }
-
-  &--mobile-index {
+  &--index {
     line-height: 29px;
     padding-top: 9px;
   }
@@ -48,4 +42,7 @@
 .page-header__apps {
   position: absolute;
   bottom: 0;
+  box-sizing: border-box;
+  padding: 20px;
+  height: 271px;
 }
