--- a/source/sass/blocks/table.scss
+++ b/source/sass/blocks/table.scss
@@ -3,30 +3,23 @@
 }
 
 .table__head-data {
-  &--mobile {
-    display: none;
-  }
+  display: none;
 }
 
 .table__body-data {
-  &--mobile {
-    display: none;
-  }
+  display: none;
 }
 
 .table__head-cell {
-  background-color: #283645;
+  background-color: $darkgrey;
   color: #ffffff;
   border-right: 2px #f2f2f2 solid;
   box-sizing: border-box;
+  width: 278px;
+  height: 94px;
 
   &:last-child {
     border-right: none;
-  }
-
-  &--mobile {
-    width: 278px;
-    height: 94px;
   }
 }
 
@@ -35,8 +28,5 @@
   background-color: #ffffff;
   border: 2px #e5e5e5 solid;
   border-top: none;
-
-  &--mobile {
-    height: 59px;
-  }
+  height: 59px;
 }
