--- a/source/sass/blocks/user-contacts.scss
+++ b/source/sass/blocks/user-contacts.scss
@@ -2,19 +2,13 @@
   margin: 0;
   padding: 0;
   display: flex;
-
-  &--mobile {
-    flex-direction: column;
-  }
+  flex-direction: column;
 }
 
 .user-contacts__item {
   display: flex;
-
-  &--mobile {
-    flex-direction: column;
-    padding-bottom: 19px;
-  }
+  flex-direction: column;
+  padding-bottom: 19px;
 }
 
 .user-contacts__input {
@@ -24,10 +18,10 @@
   height: 59px;
 
   &::-webkit-input-placeholder {
-    color: #283645;
+    color: $darkgrey;
   }
 
   &::-moz-placeholder {
-    color: #283645;
+    color: $darkgrey;
   }
 }
