--- a/source/sass/blocks/apps.scss
+++ b/source/sass/blocks/apps.scss
@@ -8,8 +8,6 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
-  padding-top: 8px;
-  padding-bottom: 18px;
   flex-grow: 1;
 }
 
@@ -33,4 +31,46 @@
   margin: 0;
   font-weight: 300;
   text-align: center;
+}
+
+@media (min-width: $tablet-width) {
+  .apps__content {
+    padding: 0;
+    align-items: center;
+  }
+
+  .apps__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+  }
+
+  .apps__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    width: 204px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .apps__description {
+    font-size: 18px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .apps__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    width: 204px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .apps__description {
+    font-size: 18px;
+  }
 }
