--- a/source/sass/blocks/benefits-intro.scss
+++ b/source/sass/blocks/benefits-intro.scss
@@ -1,11 +1,10 @@
 .benefits-intro {
   display: flex;
   flex-direction: column;
-  box-sizing: border-box;
   justify-content: space-between;
-  padding-top: 26px;
-  padding-bottom: 15px;
-  min-height: 196px;
+  padding-top: 46px - 5px;
+  padding-bottom: 35px - 5px;
+  min-height: 196px - 41px - 30px;
 }
 
 .benefits-intro__text {
@@ -14,4 +13,30 @@
   text-align: center;
   font-size: 24px;
   line-height: 29px;
+}
+
+@media (min-width: $tablet-width) {
+  .benefits-intro {
+    padding-top: 58px - 10px;
+    padding-bottom: 42px - 2px;
+    min-height: 239px - 48px - 40px;
+  }
+
+  .benefits-intro__text {
+    font-size: 40px;
+    line-height: 54px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .benefits-intro {
+    padding-top: 77px - 24px;
+    padding-bottom: 42px - 2px;
+    min-height: 315px - 77px - 24px;
+  }
+
+  .benefits-intro__text {
+    font-size: 50px;
+    line-height: 68px;
+  }
 }
