--- a/source/sass/blocks/effectiveness.scss
+++ b/source/sass/blocks/effectiveness.scss
@@ -1,3 +1,76 @@
 .effectiveness {
   display: none;
 }
+
+@media (min-width: $tablet-width) {
+  .effectiveness {
+    display: flex;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .effectiveness__wrapper {
+    padding-left: 330px - 20px;
+    padding-top: 102px;
+    padding-bottom: 29px - 5px;
+  }
+
+  .effectiveness__title {
+    margin: 0;
+    color: #000000;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    padding-right: 120px;
+    padding-bottom: 24px - 3px - 5px;
+  }
+
+  .effectiveness__description {
+    margin: 0;
+    padding-bottom: 10px;
+  }
+
+  .effectiveness__link {
+    color: $pink;
+
+    &:hover {
+      color: $darkgrey;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .effectiveness {
+    padding-left: 130px;
+    padding-right: 130px;
+    background-color: $lightgrey;
+  }
+
+  .effectiveness__wrapper {
+    padding-left: 500px - 130px;
+    padding-top: 102px;
+    padding-bottom: 120px - 6px;
+  }
+
+  .effectiveness__title {
+    line-height: 30px;
+    padding-right: 0;
+    padding-bottom: 37px;
+  }
+
+  .effectiveness__description {
+    font-size: 18px;
+    line-height: 30px;
+    padding-bottom: 35px;
+    padding-right: 36px;
+  }
+
+  .effectiveness__link {
+    font-size: 18px;
+    line-height: 30px;
+  }
+}
