--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,12 +1,12 @@
 .reviews__wrapper {
   padding: 20px;
+  padding-top: 46px;
 }
 
 .reviews__item {
   display: flex;
   flex-direction: column;
   margin: 0;
-  padding-top: 26px;
 
   &--no-display {
     display: none;
@@ -32,4 +32,51 @@
 
 .reviews__author-info {
   display: none;
+}
+
+@media (min-width: $tablet-width) {
+  .reviews__wrapper {
+    padding-top: 109px;
+  }
+
+  .reviews__item {
+    align-items: center;
+  }
+
+  .reviews__text {
+    margin: 0;
+    padding-bottom: 36px;
+    text-align: center;
+    font-size: 18px;
+  }
+
+  .reviews__author-name {
+    font-size: 20px;
+    order: 0;
+    padding-bottom: 0;
+  }
+
+  .reviews__author-info {
+    display: block;
+    font-style: normal;
+    line-height: 30px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .reviews__wrapper {
+    padding-top: 193px;
+    padding-left: 256px;
+    padding-right: 256px;
+  }
+
+  .reviews__author-name {
+    font-size: 24px;
+  }
+
+  .reviews__author-info {
+    display: block;
+    font-style: normal;
+    font-size: 18px;
+  }
 }
