--- a/source/sass/blocks/head-cell.scss
+++ b/source/sass/blocks/head-cell.scss
@@ -16,3 +16,23 @@
   font-size: 18px;
   line-height: 30px;
 }
+
+@media (min-width: $tablet-width) {
+  .head-cell {
+    padding: 4px 33px 4px 33px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .head-cell {
+    padding: 9px 66px 9px 66px;
+  }
+
+  .head-cell__rate {
+    font-size: 18px;
+  }
+
+  .head-cell__price {
+    font-size: 24px;
+  }
+}
