--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,5 +1,7 @@
 .contacts__wrapper {
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 47px;
 }
 
 .contacts__title {
@@ -8,12 +10,12 @@
   text-align: center;
   font-size: 24px;
   line-height: 29px;
-  padding-top: 27px;
   padding-bottom: 18px;
 }
 
 .contacts__list {
   margin: 0;
+  padding-bottom: 14px;
 }
 
 .contacts__item-term {
@@ -43,4 +45,74 @@
   font-weight: 300;
   font-size: 24px;
   line-height: 33px;
+}
+
+.contacts__map {
+  height: 200px;
+}
+
+@media (min-width: $tablet-width) {
+  .contacts__title {
+    font-size: 40px;
+    line-height: 54px;
+    padding-bottom: 36px;
+  }
+
+  .contacts__list {
+    padding-bottom: 7px;
+  }
+
+  .contacts__item-wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding-right: 30px;
+    padding-bottom: 25px;
+    padding-left: 47px;
+  }
+
+  .contacts__map {
+    height: 374px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .contacts__wrapper {
+    padding-left: 130px;
+    padding-right: 130px;
+    padding-top: 64px;
+  }
+
+  .contacts__title {
+    font-size: 50px;
+    line-height: 68px;
+    padding-bottom: 41px;
+  }
+
+  .contacts__list {
+    position: relative;
+    padding-bottom: 0;
+  }
+
+  .contacts__item-wrapper {
+    padding-left: 47px;
+    padding-right: 30px;
+    padding-bottom: 53px;
+  }
+
+  .contacts__item {
+    &--address {
+      position: absolute;
+      top: 0;
+      left: 354px;
+      padding: 0;
+    }
+  }
+
+  .contacts__item-description {
+    padding-bottom: 0;
+  }
+
+  .contacts__map {
+    height: 4021px - 3518px;
+  }
 }
