--- a/source/sass/blocks/submit-wrapper.scss
+++ b/source/sass/blocks/submit-wrapper.scss
@@ -3,3 +3,11 @@
   flex-direction: column;
   align-items: center;
 }
+
+@media (min-width: $tablet-width) {
+  .submit-wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 50px;
+  }
+}
