--- a/source/sass/blocks/user-contacts.scss
+++ b/source/sass/blocks/user-contacts.scss
@@ -25,3 +25,20 @@
     color: $darkgrey;
   }
 }
+
+@media (min-width: $tablet-width) {
+  .user-contacts__input {
+    order: -1;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .user-contacts__list {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .user-contacts__item {
+    width: 565px - 130px - 60px;
+  }
+}
