--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -38,3 +38,74 @@
     background-color: #f2f2f2;
   }
 }
+
+@media (min-width: $tablet-width) {
+  .modal {
+    width: 460px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+  }
+
+  .modal__content-wrapper {
+    &--fault {
+      padding: 41px 80px 0 80px;
+    }
+
+    &--accept {
+      padding: 41px 70px 36px 70px;
+    }
+  }
+
+  .modal__title {
+    font-size: 30px;
+    line-height: 40px;
+    padding-bottom: 29px;
+  }
+
+  .modal__description {
+    font-size: 18px;
+  }
+
+  .modal__button-wrapper {
+    &--accept {
+      width: 100%;
+      display: flex;
+      padding-right: 0;
+      padding-left: 0;
+      justify-content: center;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .modal {
+    width: 780px;
+  }
+
+  .modal__content-wrapper {
+    &--fault {
+      padding: 41px 215px 36px 215px;
+    }
+
+    &--accept {
+      padding: 41px 201px 36px 201px;
+    }
+  }
+
+  .modal__button-wrapper {
+    &--fault {
+      background-color: #f2f2f2;
+      width: 100%;
+      display: flex;
+      padding-right: 0;
+      padding-left: 0;
+      justify-content: center;
+    }
+  }
+
+  .modal__button--accept {
+    width: 456px;
+  }
+}
