--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -51,3 +51,60 @@
   text-transform: uppercase;
   color: $pink;
 }
+
+@media (min-width: $tablet-width) {
+  .photo__content {
+    padding: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    min-height: auto;
+    height: 155px;
+    justify-content: space-between;
+
+    &--win {
+      flex-direction: row;
+      flex-wrap: wrap;
+      height: 121px;
+    }
+  }
+
+  .photo__text {
+    padding: 0;
+
+    &--win {
+      order: 1;
+    }
+  }
+
+  .photo__likes {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+
+    &--win {
+      width: 610px - 490px;
+    }
+  }
+
+  .photo__like-button {
+    order: 1;
+    padding-right: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .photo__content-container {
+    padding-left: 130px;
+    padding-right: 130px;
+  }
+
+  .photo__content {
+    align-items: center;
+
+    &--win {
+      align-content: center;
+      height: 96px;
+      padding: 20px 30px 20px 27px;
+    }
+  }
+}
