--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,5 +1,5 @@
 .catalog__intro-wrapper {
-  padding-bottom: 52px;
+  padding: 46px 20px 52px 20px;
 }
 
 .catalog__intro {
@@ -9,5 +9,30 @@
 }
 
 .catalog__motive-wrapper {
-  padding-bottom: 44px;
+  padding: 16px 20px 34px 20px;
+}
+
+@media (min-width: $tablet-width) {
+  .catalog__intro-wrapper {
+    padding: 94px 110px 79px 110px;
+  }
+
+  .catalog__intro {
+    font-size: 18px;
+    line-height: 30px;
+  }
+
+  .catalog__motive-wrapper {
+    padding: 73px 110px 73px 110px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__intro-wrapper {
+    padding: 94px 314px 79px 314px;
+  }
+
+  .catalog__motive-wrapper {
+    padding: 73px 110px 73px 110px;
+  }
 }
