--- a/source/sass/blocks/content-wrapper.scss
+++ b/source/sass/blocks/content-wrapper.scss
@@ -3,3 +3,11 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
+@media (min-width: $tablet-width) {
+  .content-wrapper {
+    padding-top: 94px;
+    padding-left: 110px;
+    padding-right: 110px;
+  }
+}
