--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -59,15 +59,11 @@
   }
 
   .contacts__list {
-    padding-bottom: 7px;
-  }
-
-  .contacts__item-wrapper {
     display: flex;
-    justify-content: space-between;
-    padding-right: 30px;
-    padding-bottom: 25px;
-    padding-left: 47px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
+    padding-bottom: 7px;
   }
 
   .contacts__map {
@@ -77,9 +73,7 @@
 
 @media (min-width: $desktop-width) {
   .contacts__wrapper {
-    padding-left: 130px;
-    padding-right: 130px;
-    padding-top: 64px;
+    padding-left: 64px 130px 25px 130px;
   }
 
   .contacts__title {
@@ -89,27 +83,14 @@
   }
 
   .contacts__list {
-    position: relative;
-    padding-bottom: 0;
-  }
-
-  .contacts__item-wrapper {
-    padding-left: 47px;
-    padding-right: 30px;
-    padding-bottom: 53px;
+    padding-left: 100px;
+    padding-right: 100px;
   }
 
   .contacts__item {
-    &--address {
-      position: absolute;
-      top: 0;
-      left: 354px;
-      padding: 0;
+    &--email {
+      order: 3;
     }
-  }
-
-  .contacts__item-description {
-    padding-bottom: 0;
   }
 
   .contacts__map {
