--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -176,6 +176,29 @@
     }
   }
 
+  .form__fieldset {
+    &--platform {
+      padding-top: 54px;
+      padding-bottom: 54px;
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+
+    &--user-contacts {
+      padding-top: 46px;
+    }
+
+    &--achievements {
+      padding-top: 54px;
+      padding-bottom: 50px;
+    }
+
+    &--story {
+      padding-top: 47px;
+      padding-bottom: 53px;
+    }
+  }
+
   .form__add-note {
     display: inline;
   }
